<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:src="@drawable/sheet_indicator" />

        <br.com.kmdev.ui.components.TextViewComponent
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/rooms_option_title_label"
            android:textSize="18sp"
            app:textViewFontExtraBold="true" />

        <RadioGroup
            android:id="@+id/radioGroupRoomOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <br.com.kmdev.ui.components.RadioButtonComponent
                android:id="@+id/rbOptionFixedOnTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/rooms_option_title_label_fix_on_top"
                android:textSize="16sp"
                app:radioButtonFontBold="true" />

            <br.com.kmdev.ui.components.RadioButtonComponent
                android:id="@+id/rbOptionHideFromList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/rooms_option_title_label_hide_list"
                android:textSize="16sp"
                app:radioButtonFontBold="true" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btRoomOptionsActionConfirm"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/rooms_option_action_confirm" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
