<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.rooms.RoomListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <br.com.kmdev.ui.components.TextViewComponent
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_label_room_list"
            android:textSize="12sp"
            app:textViewFontBold="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:alpha="0.3"
            android:background="?colorOnBackground" />

        <LinearLayout
            android:id="@+id/viewNoUserDefined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:visibility="gone"
            tools:visibility="visible">

            <br.com.kmdev.ui.components.TextViewComponent
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/room_list_label_you_need_to_set_username"
                android:textSize="14sp"
                app:textViewFontBold="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btActionSetUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/room_list_label_touch_to_set" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRoomList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabNewChatRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="24dp"
        android:text="@string/room_list_label_new_room"
        android:textColor="?colorOnPrimary"
        app:icon="@drawable/ic_round_send_24"
        app:iconTint="?colorOnPrimary" />

</FrameLayout>